# CppSpaceGame

./: .gitignore  CMakeLists.txt  README.md  create_ship
src/: camera.cpp  camera.h  create_ship.cpp  entity.cpp  entity.h  main.cpp  renderer.cpp  renderer.h  ship.cpp  ship.h  voxel.cpp  voxel.h
